--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-PORT =        apply here your custom configuration
+MONGOPORT =apply here your custom configuration
 # database
-MONGODB_URL = apply here your custom configuration
+MONGO_URL = apply here your custom configuration
 
 # cloudinary Secrets are
 CLOUD_NAME = apply here your custom configuration
