--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "multer": "^2.0.2",
     "nodemailer": "^7.0.5",
     "path": "^0.12.7",
+    "streamifier": "^0.1.1",
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
